apps/microservices/api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: first-api-https-route
spec:
  parentRefs:
    - name: micro-gateway
      kind: Gateway
      sectionName: https
      namespace: istio-system
  hostnames:
    - "first-api.sirpify.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: first-api-svc
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: first-api-http-route
spec:
  parentRefs:
    - name: micro-gateway
      kind: Gateway
      sectionName: http
      namespace: istio-system
  hostnames:
    - "first-api.sirpify.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
